--- a/huma-demo-dapp/package.json
+++ b/huma-demo-dapp/package.json
@@ -64,14 +64,7 @@
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "contracts:compile:abi": "typechain --target ethers-v5 --out-dir src/abis/types \"./src/abis/**/*.json\"",
-    "e2e": "cypress run --config baseUrl=http://localhost:3000 --headed --browser chrome --e2e",
-    "prepare": "husky install",
-    "lint-staged": "lint-staged"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "git add . && lint-staged"
-    }
+    "e2e": "cypress run --config baseUrl=http://localhost:3000 --headed --browser chrome --e2e"
   },
   "lint-staged": {
     "src/**/*.{js,ts,tsx,css,sass,less,graphql}": [
@@ -109,7 +102,6 @@
     "@types/testing-library__cypress": "^5.0.9",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
-    "cypress": "^12.2.0",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -120,7 +112,6 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "husky": "^8.0.0",
     "lint-staged": "^10.5.4",
     "prettier": "^2.7.1",
     "typechain": "^8.1.0"
