--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
-.pnp.js
+huma-demo-dapp/node_modules
+huma-demo-dapp/.pnp
+huma-demo-dapp.pnp.js
 
 # testing
-/coverage
+huma-demo-dapp/coverage
 
 # production
-/build
+huma-demo-dapp/build
 
 # misc
 .DS_Store
@@ -23,7 +23,4 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-cypress/downloads
-cypress/screenshots
-cypress/videos
-cypress.env.json
+evaluation_agent/__pycache__
